--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,9 +7,12 @@
 <%- include('../includes/nav.ejs') %>
 
 <main>
+      <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+      <% } %>
       <form class="login-form" action="/login" method="POST">
       <div class="form-control">
-            <label for="email">E-Mail</label>
+            <label for="email">Email</label>
             <input type="text" name="email" id="email">
       </div>
       <div class="form-control">
@@ -17,6 +20,7 @@
             <input type="password" name="password" id="password">
       </div>
 
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <button class="btn" type="submit">Login</button>
       </form>
 </main>
